--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-- Beacon Demo Firmware PAR2860 BLE Module
-- Module Breakout board
+- (Keil uvision) Beacon Demo Firmware PAR2860 BLE Module
+- (Kicad) Module Breakout board
